--- a/demo/demo.qmd
+++ b/demo/demo.qmd
@@ -32,6 +32,15 @@ print(p)
 ---
 
 ## Python / conda section (Quarto Python engine)
+```{r}
+reticulate::py_config()
+
+# import pandas
+pd <- import("pandas")
+df <- pd$DataFrame(list(x = c(1,2,3), y = c(4,5,6)))
+print(df)
+```
+
 
 ```{python}
 # Example Python snippet (requires the conda env from environment.yml)
