--- a/slides/index.qmd
+++ b/slides/index.qmd
@@ -191,6 +191,12 @@ Note: This works in Quarto (.qmd) but requires reticulate in R Markdown (.Rmd)
 
 ---
 
+## Workflow: renv + conda + reticulate
+
+![](images/workflow_diagram.jpeg)
+
+---
+
 ## Troubleshooting checks (RStudio)
 
 - In Terminal: `python --version` and `which python` (mac) or `where python` (windows)
